<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="bookmarkDetailsView"
            type="com.subranil_saha.placebook.viewmodel.BookmarkDetailViewModel.BookmarkDetailsView" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@id/toolbar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.AppBarOverlay" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="300dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/default_photo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewName"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewPlace" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewCategoryLabel"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/category"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerCategory"
                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinnerCategory" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewNotes"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="@string/notes"
                    app:layout_constraintBaseline_toBaselineOf="@id/editTextNotes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewCategoryLabel" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewPhone"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewNotes" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewAddress"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewPhone" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="start"
                    app:constraint_referenced_ids="editTextName,editTextNotes,editTextPhone, editTextAddress, spinnerCategory" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/name"
                    android:text="@{bookmarkDetailsView.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewPlace" />

                <ImageView
                    android:id="@+id/imageViewCategory"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_other"
                    app:layout_constraintBottom_toBottomOf="@+id/spinnerCategory"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toTopOf="@+id/spinnerCategory" />

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight='1.4'
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewCategory"
                    app:layout_constraintTop_toBottomOf="@+id/editTextName" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNotes"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/enter_notes"
                    android:text="@{bookmarkDetailsView.notes}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/phone_number"
                    android:text="@{bookmarkDetailsView.phone}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNotes" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAddress"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:text="@{bookmarkDetailsView.address}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@android:drawable/ic_menu_share"
            android:layout_margin="@dimen/dimen_16"
            android:contentDescription="@string/share" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>